--- a/about.html
+++ b/about.html
@@ -8,13 +8,89 @@
       content="This contains information about Front-end developer Alicia Fletcher with
       images of her previous coding projects for yoga, a weather app and yogurt"
     />
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/style.css" />
     <title>
       This is information about front-end developer Alicia Fletcher who lives in
       London UK
     </title>
   </head>
   <body>
+    <nav
+      class="navbar fixed-top navbar-expand-lg mb-5"
+      style="background-color: #e3f2fd"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Alicia Fletcher</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" href="/">About me</a>
+            <a class="nav-link" href="/about.html#contact">Contact me</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
     <h1>About me</h1>
+    <h3>Front-end developer from London, UK</h3>
+    <div class="about-paragraphs">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+        <br />
+      </p>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img
+            src="/images/yoga.png"
+            class="img-fluid shadow rounded mt-3 p-4"
+          />
+        </div>
+        <div class="col-sm-4">
+          <img
+            src="/images/weather.png"
+            class="img-fluid shadow rounded mt-3 p-4"
+          />
+        </div>
+        <div class="col-sm-4">
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid shadow rounded mt-3 p-4"
+          />
+        </div>
+        <div id="contact" class="mt-5">
+          <h2>📮 Contact me</h2>
+          <a href="mailto:alicia_aqui@hotmail.com" class="email-link"
+            >alicia_aqui@hotmail.com</a
+          >
+        </div>
+      </div>
+    </div>
   </body>
 </html>
