--- a/about.html
+++ b/about.html
@@ -31,7 +31,9 @@
       style="background-color: #e3f2fd"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Alicia Fletcher</a>
+        <a class="navbar-brand" href="/" title="Alicia Fletcher"
+          >Alicia Fletcher</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -45,9 +47,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link active" href="/">About me</a>
-            <a class="nav-link" href="/about.html#contact">Contact me</a>
+            <a class="nav-link" aria-current="page" href="/" title="Home"
+              >Home</a
+            >
+            <a class="nav-link active" href="/" title="About me">About me</a>
+            <a class="nav-link" href="/about.html#contact" title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -69,24 +75,33 @@
         <div class="col-sm-4">
           <img
             src="/images/yoga.png"
+            alt="Yoga image"
+            title="Yoga - Standing pose"
             class="img-fluid shadow rounded mt-3 p-4"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/weather.png"
+            alt="Weather-app image"
+            title="Weather App"
             class="img-fluid shadow rounded mt-3 p-4"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/yogurt.png"
+            alt="Yogurt image"
+            title="About yogurt"
             class="img-fluid shadow rounded mt-3 p-4"
           />
         </div>
         <div id="contact" class="mt-5">
           <h2>📮 Contact me</h2>
-          <a href="mailto:alicia_aqui@hotmail.com" class="email-link"
+          <a
+            href="mailto:alicia_aqui@hotmail.com"
+            title="Contact me: alicia_aqui@hotmail.com"
+            class="email-link"
             >alicia_aqui@hotmail.com</a
           >
         </div>
