--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       style="background-color: #e3f2fd"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Alicia Fletcher</a>
+        <a class="navbar-brand" href="/" title="Alicia Fletcher"
+          >Alicia Fletcher</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -42,13 +44,23 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About me"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="Contact me"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -60,8 +72,10 @@
     <h3>🇬🇧 Front-end developer, based in London</h3>
 
     <div class="navigation-links">
-      <a href="/about.html#contact" class="primary-link">Contact me</a>
-      <a href="/about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" title="Contact me" class="primary-link"
+        >Contact me</a
+      >
+      <a href="/about.html" title="About me" class="about-link">About me</a>
     </div>
     <div class="container-fluid">
       <div class="row mt-5">
