Introduced CSS Media Queries to make project mobile friendly

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       style="background-color: #e3f2fd"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Alicia Fletcher"
+        <a class="navbar-brand name-font" href="/" title="Alicia Fletcher"
           >Alicia Fletcher</a
         >
         <button
