--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       style="background-color: #e3f2fd"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Alicia Fletcher"
+        <a class="navbar-brand name-font" href="/" title="Alicia Fletcher"
           >Alicia Fletcher</a
         >
         <button
@@ -77,12 +77,12 @@
       >
       <a href="/about.html" title="About me" class="about-link">About me</a>
     </div>
-    <div class="container-fluid">
-      <div class="row mt-5">
-        <div class="col-6">
+    <div class="container-fluid homepage-container">
+      <div class="row">
+        <div class="col-sm-6">
           <img src="/images/yoga.png" class="img-fluid rounded" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga App</h2>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -90,13 +90,14 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-3 mb-5">
+          <div class="mt-3 mb-4">
             <a href="/" class="primary-link container-links">Launch yoga app</a>
           </div>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-6">
+      <br />
+      <div class="row">
+        <div class="col-sm-6">
           <h2 class="mb-2">Weather App</h2>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -104,21 +105,22 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-3 mb-5">
+          <div class="mt-3 mb-4">
             <a href="/" class="primary-link container-links"
               >Launch weather app</a
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img src="/images/weather.png" class="img-fluid rounded" />
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
+      <br />
+      <div class="row">
+        <div class="col-sm-6">
           <img src="/images/yogurt.png" class="img-fluid rounded" />
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt App</h2>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -126,7 +128,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-3 mb-5">
+          <div class="mt-3 mb-4">
             <a href="/" class="primary-link container-links"
               >Launch yogurt app</a
             >
